Regression: Holding Ctrl + Alt + Scroll does not increment values of all selected objects #112028

Closed
opened 2023-09-06 14:12:52 +02:00 by Gabriel Radić · 5 comments
First-time contributor

Operating system: Windows 10 Latest
Graphics card: 7900 XTX

Blender Version
Broken: 3.6.x (Tested on both 3.6.1 and 3.6.2)
Worked: 3.5.x (Tested on 3.5.1)

Short description of error

In 3.5.x and previous, holding the Control and the ALT key while having multiple object selected, you could incrementally decrease various values, such as number of segments in the Bevel. This does not working starting with 3.6.x.

I've attached a video both showing behaviours in 3.5.x where it works, and 3.6.1 where it doesn't work.

However, HOLD alt and changing a value still works, it is just the incremental (Holding CTRL + Alt, and scrolling the mouse wheel) one doesn't work.

Exact steps for others to reproduce the error

  • make 2 cubes,
  • add a bevel modifier,
  • while holding ALT plus CTRL, hover mouse of a value (al be it modifer or anything else) and scroll the mouse

It should change the value of both objects rather than simply one.

Operating system: Windows 10 Latest Graphics card: 7900 XTX **Blender Version** Broken: 3.6.x (Tested on both 3.6.1 and 3.6.2) Worked: 3.5.x (Tested on 3.5.1) **Short description of error** <video src="/attachments/59c026de-6d42-4277-b070-6b40cfd488de" title="Blender_2023.09.06-14.10.mp4" controls></video> In 3.5.x and previous, holding the Control and the ALT key while having multiple object selected, you could incrementally decrease various values, such as number of segments in the Bevel. This does not working starting with 3.6.x. I've attached a video both showing behaviours in 3.5.x where it works, and 3.6.1 where it doesn't work. However, HOLD alt and changing a value still works, it is just the incremental (Holding CTRL + Alt, and scrolling the mouse wheel) one doesn't work. **Exact steps for others to reproduce the error** - make 2 cubes, - add a bevel modifier, - while holding ALT plus CTRL, hover mouse of a value (al be it modifer or anything else) and scroll the mouse It should change the value of both objects rather than simply one.
Gabriel Radić added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-06 14:12:53 +02:00

Apparently you have to click on the property with the MMB first.
I don't know when that changed, but it certainly doesn't sound ideal.
I'm confirming for now, but I'll bisect to see where this was introduced and if it's somehow intentional.

Seems related to:
#79120: Changing dimension on multiple objects no-longer works

Apparently you have to click on the property with the MMB first. I don't know when that changed, but it certainly doesn't sound ideal. I'm confirming for now, but I'll bisect to see where this was introduced and if it's somehow intentional. Seems related to: #79120: Changing dimension on multiple objects no-longer works
Germano Cavalcante changed title from [3.6.x] Holding Control + Alt does not incrementally change values in modifiers when multi selection of objects to Regression: Holding Ctrl + Alt + Scroll does not increment values of all selected objects 2023-09-06 17:57:31 +02:00

Btw, before bisecting, @Harley, @JulianEisel, does this issue ring a bell?

Btw, before bisecting, @Harley, @JulianEisel, does this issue ring a bell?
Author
First-time contributor

Yeah previously it was really intuitive, it would be shame if we can't keep the behaviour as it was.

Yeah previously it was really intuitive, it would be shame if we can't keep the behaviour as it was.
Member

Will check on this.

Will check on this.
Philipp Oeser self-assigned this 2023-09-07 10:16:25 +02:00
Member

Was caused by c51467cd4c

Looking into getting mouswheel support in there as well, needs to fetched from win->event_queue.last instead of win->eventstate it seems

Was caused by c51467cd4c4cdce3833641f63b7cc2f49ea3a1a8 Looking into getting mouswheel support in there as well, needs to fetched from `win->event_queue.last` instead of `win->eventstate` it seems
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-11 15:34:34 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112028
No description provided.